# long-attention

./: .gitignore  Applying_New_kernel.ipynb  Compare.ipynb  Profiling.ipynb  README.md  Testing_Memory.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled3.ipynb  __init__.py  debugging_model.ipynb  evaluate.py  evaluate_ppl.py  functional.py  fused_kernel.ipynb  generate_token.ipynb  holo_scan_performance.csv  hybrid_model.py  induction_heads.ipynb  long_attention.py  main.py  modeling_holo.py  niah_listops.ipynb  prep_data.py  pyproject.toml  requirements.txt  results.html  run_benchmarks.py  train_finewebedu.py  train_pg19.py  train_slimpajama.py  train_wikitext103.py  train_wikitext2.py  utils.py
.ipynb_checkpoints/: README-checkpoint.md  Untitled-checkpoint.ipynb  debugging_model-checkpoint.ipynb  requirements-checkpoint.txt
benchmarks/: Benchmark.ipynb  NIAH.ipynb  Test_on_pretrained.ipynb  Tiny_Stories.ipynb  induction_heads.py  needle_haystack.py  niah_listops.ipynb  overfitting_test.ipynb  run.txt  sanity_test.ipynb  speed_test.py  tiny_stories.py
dataset/: data_loader.py  freeze_data.py
experiments/: ListOps.ipynb  NIAH.ipynb
fineweb_edu10-long-small/: events.out.tfevents.1769606222.ff3d00a1036c.2545.0  events.out.tfevents.1769606438.ff3d00a1036c.3087.0  events.out.tfevents.1769606651.ff3d00a1036c.3448.0  events.out.tfevents.1769607138.ff3d00a1036c.3899.0  events.out.tfevents.1769607324.ff3d00a1036c.4303.0
fineweb_edu10-mamba2-small/: events.out.tfevents.1769609467.782086ca0db6.3706.0  events.out.tfevents.1769609679.782086ca0db6.6328.0  events.out.tfevents.1769609769.782086ca0db6.8196.0  events.out.tfevents.1769610138.782086ca0db6.12466.0  events.out.tfevents.1769610389.782086ca0db6.14477.0  events.out.tfevents.1769610501.782086ca0db6.16128.0  events.out.tfevents.1769610739.782086ca0db6.18563.0
gpt2_mamba/: GPT2.ipynb
holo_logs/: events.out.tfevents.1767420499.90974df18da8.6805.0  events.out.tfevents.1767420703.90974df18da8.7029.0  events.out.tfevents.1767421048.90974df18da8.7313.0  events.out.tfevents.1767422926.90974df18da8.7991.0  events.out.tfevents.1767423004.90974df18da8.8347.0  events.out.tfevents.1767423288.90974df18da8.8716.0  events.out.tfevents.1767423734.90974df18da8.9225.0  events.out.tfevents.1767424023.90974df18da8.9628.0  events.out.tfevents.1767427592.90974df18da8.11712.0  events.out.tfevents.1767427629.90974df18da8.11896.0  events.out.tfevents.1767427683.90974df18da8.12256.0  events.out.tfevents.1767427755.90974df18da8.12688.0  events.out.tfevents.1767427817.90974df18da8.12982.0  events.out.tfevents.1767428102.90974df18da8.13496.0  events.out.tfevents.1767428187.90974df18da8.13865.0  events.out.tfevents.1767428343.90974df18da8.14239.0  events.out.tfevents.1767428789.90974df18da8.15222.0  events.out.tfevents.1767429131.90974df18da8.16325.0  events.out.tfevents.1767429390.90974df18da8.17102.0  events.out.tfevents.1767430578.90974df18da8.17725.0  events.out.tfevents.1767431475.90974df18da8.18672.0  events.out.tfevents.1767432209.90974df18da8.22608.0  events.out.tfevents.1767432560.90974df18da8.23951.0  events.out.tfevents.1767432774.90974df18da8.24597.0  events.out.tfevents.1767433359.90974df18da8.26414.0  events.out.tfevents.1767434337.90974df18da8.30279.0  events.out.tfevents.1767438152.90974df18da8.34153.0  events.out.tfevents.1767438353.90974df18da8.34522.0  events.out.tfevents.1767438414.90974df18da8.34872.0  events.out.tfevents.1767438550.90974df18da8.35233.0  events.out.tfevents.1767439351.90974df18da8.2009.0  events.out.tfevents.1767439443.90974df18da8.2470.0  events.out.tfevents.1767439564.90974df18da8.2838.0  events.out.tfevents.1767440261.90974df18da8.3812.0  events.out.tfevents.1767440391.90974df18da8.3947.0  events.out.tfevents.1767440828.90974df18da8.4150.0  events.out.tfevents.1767441793.90974df18da8.4706.0  events.out.tfevents.1767441989.90974df18da8.4966.0
holo_small_187M_onwards/: events.out.tfevents.1767935557.459aba0e0cd5.8704.0
holo_small_344M/: events.out.tfevents.1767803394.f4cc11e2f002.6804.0  events.out.tfevents.1767803513.f4cc11e2f002.8443.0  events.out.tfevents.1767803612.f4cc11e2f002.9903.0  events.out.tfevents.1767803847.f4cc11e2f002.12562.0  events.out.tfevents.1767804573.f4cc11e2f002.18826.0  events.out.tfevents.1767805182.f4cc11e2f002.24721.0  events.out.tfevents.1767805359.f4cc11e2f002.26864.0  events.out.tfevents.1767805527.f4cc11e2f002.28917.0  events.out.tfevents.1767805580.f4cc11e2f002.30086.0  events.out.tfevents.1767805656.f4cc11e2f002.31271.0  events.out.tfevents.1767805795.f4cc11e2f002.33002.0  events.out.tfevents.1767806001.f4cc11e2f002.35198.0  events.out.tfevents.1767806223.f4cc11e2f002.37593.0  events.out.tfevents.1767806262.f4cc11e2f002.38568.0  events.out.tfevents.1767808029.f4cc11e2f002.57375.0  events.out.tfevents.1767808122.f4cc11e2f002.58463.0  events.out.tfevents.1767880631.5b75089553be.8299.0  events.out.tfevents.1767890262.5b75089553be.100199.0
logs/: events.out.tfevents.1766910965.aa819ed346bd.5093.0  events.out.tfevents.1766911137.aa819ed346bd.5472.0  events.out.tfevents.1766911543.aa819ed346bd.5472.1  events.out.tfevents.1766911882.aa819ed346bd.5795.0  events.out.tfevents.1766912234.aa819ed346bd.6132.0  events.out.tfevents.1766912561.aa819ed346bd.6132.1
model/: __init__.py  configuration_holo.py  functional.py  layers.py  (+2 more)
(+206 files in other folders)
