[project]
name = "long-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "rich>=14.2.0",
    "tensorboard>=2.20.0",
    "torchmetrics>=1.8.2",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

