[project]
name = "long-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "deepspeed>=0.18.3",
    "ipykernel>=7.1.0",
    "lm-eval>=0.4.9.2",
    "matplotlib>=3.10.8",
    "rich>=14.2.0",
    "tensorboard>=2.20.0",
    "torchmetrics>=1.8.2",
    "tqdm[notebook]>=4.67.1",
    "transformers>=4.57.3",
    "wandb>=0.23.1",
]

[tool.uv]
package = false
