[project]
name = "long-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "torch==2.7.0",
    "transformers==4.57.0",
    "torchvision==0.22.0",
    "torchaudio==2.7.0",
    "ninja>=1.11.1",
    "packaging>=23.2",
    "mamba_ssm==2.2.6.post3",
    "causal_conv1d==1.5.4",
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "deepspeed>=0.18.3",
    "ipykernel>=7.1.0",
    "lm-eval>=0.4.9.2",
    "matplotlib>=3.10.8",
    "numpy>=2.0.0,<2.4.0",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
    "tbparse>=0.0.9",
    "wandb>=0.23.1",
    "torchmetrics>=1.8.2",
    "ipywidgets>=8.1.8",
]

[tool.uv]
package = false
build-constraint-dependencies = ["torch==2.7.0", "ninja", "packaging"]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true 

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
torchaudio = [{ index = "pytorch-cu128" }]

# --- SMART FALLBACK LOGIC ---
# Strategy: Use specific markers to direct Linux Users to Wheels, and everyone else to Git.

causal-conv1d = [
    # PATH A: Binary Wheels (Linux x86_64 ONLY) - ABI=True
    { url = "https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.5.4/causal_conv1d-1.5.4+cu12torch2.7cxx11abiTRUE-cp311-cp311-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.11'" },
    { url = "https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.5.4/causal_conv1d-1.5.4+cu12torch2.7cxx11abiTRUE-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.12'" },
    { url = "https://github.com/Dao-AILab/causal-conv1d/releases/download/v1.5.4/causal_conv1d-1.5.4+cu12torch2.7cxx11abiTRUE-cp313-cp313-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.13'" },
    
    # PATH B: Fallback to Source (Mac, Windows, or ARM Linux)
    { git = "https://github.com/Dao-AILab/causal-conv1d/", tag = "v1.5.4", marker = "sys_platform != 'linux' or platform_machine != 'x86_64'" }
]

# mamba-ssm = [
#     # PATH A: Binary Wheels (Linux x86_64 ONLY) - ABI=True
#     { url = "https://github.com/state-spaces/mamba/releases/download/v2.3.0/mamba_ssm-2.3.0+cu12torch2.7cxx11abiTRUE-cp311-cp311-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.11'" },
#     { url = "https://github.com/state-spaces/mamba/releases/download/v2.3.0/mamba_ssm-2.3.0+cu12torch2.7cxx11abiTRUE-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.12'" },
#     { url = "https://github.com/state-spaces/mamba/releases/download/v2.3.0/mamba_ssm-2.3.0+cu12torch2.7cxx11abiTRUE-cp313-cp313-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.13'" },

#     # PATH B: Fallback to Source (Mac, Windows, or ARM Linux)
#     { git = "https://github.com/state-spaces/mamba", tag = "v2.3.0", marker = "sys_platform != 'linux' or platform_machine != 'x86_64'" }
# ]

mamba-ssm = [
    # PATH A: Binary Wheels (Linux x86_64 ONLY) - ABI=True
    { url = "https://github.com/state-spaces/mamba/releases/download/v2.2.6.post3/mamba_ssm-2.2.6.post3+cu12torch2.7cxx11abiTRUE-cp311-cp311-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.11'" },
    { url = "https://github.com/state-spaces/mamba/releases/download/v2.2.6.post3/mamba_ssm-2.2.6.post3+cu12torch2.7cxx11abiTRUE-cp312-cp312-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.12'" },
    { url = "https://github.com/state-spaces/mamba/releases/download/v2.2.6.post3/mamba_ssm-2.2.6.post3+cu12torch2.7cxx11abiTRUE-cp313-cp313-linux_x86_64.whl", marker = "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.13'" },

    # PATH B: Fallback to Source (Mac, Windows, or ARM Linux)
    { git = "https://github.com/state-spaces/mamba", tag = "v2.2.6.post3", marker = "sys_platform != 'linux' or platform_machine != 'x86_64'" }
]